add support of static fields and static methods

--- a/NDynamicCompile/NDynamicCompile.csproj
+++ b/NDynamicCompile/NDynamicCompile.csproj
@@ -39,6 +39,7 @@
     <Compile Include="NDCAssembly.cs" />
     <Compile Include="NDCClass.cs" />
     <Compile Include="NDCCompiler.cs" />
+    <Compile Include="NDCDelegate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
